# rgame

./: Cargo.toml  server.toml
accountserver/: Cargo.toml
accountserver/src/: main.rs
config/: Cargo.toml  server.toml
config/json/: channel.json
config/src/: configs.rs  lib.rs
configs/: Cargo.toml  README.md  build.rs  server.toml
configs/json/: channel.json  lang.json
configs/src/: configs.rs  lang.rs  lib.rs
configs/tpl/: lang.rs.tpl
consts/: Cargo.toml
consts/src/: lib.rs
gamelib/: Cargo.toml
gamelib/src/: lib.rs
gameserver/: Cargo.toml
gameserver/src/: main.rs
gateserver/: Cargo.toml
gateserver/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
models/: Cargo.toml  build.rs  full.sql
models/proto/: role.proto
models/src/: lib.rs  role.rs  tests.rs
prebuild/: Cargo.toml  build.rs
prebuild/proto/: helloworld.proto
prebuild/src/: helloworld.rs
services/account_service/: Cargo.toml
services/account_service/src/: lib.rs
services/gate_service/: Cargo.toml
services/gate_service/src/: lib.rs
services/hall_service/: Cargo.toml
services/hall_service/src/: lib.rs
sql/: Cargo.toml  full.sql
sql/src/: main.rs
