[package]
name = "configs"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static={version = "1.5.0"}
serde = "1.0.217"
serde_derive = "1.0.217"
toml = "0.8.20"
serde_json={version="1.0.138"}
mysql={version = "26.0.0"}
mysql_common={version = "0.34.1", features = ["derive"]}
consts={path = "../consts"}


[build-dependencies]
serde_json={version="1.0.138"}
serde = "1.0.217"
serde_derive = "1.0.217"
handlebars = { version="6.3.1" }
